--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Roboto:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
+@import "~bootstrap/scss/bootstrap";
+@import "./scss/main.scss";
 html,
 body {
   padding: 0;
