Add postcard component

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,7 @@
 @import "./scss/main.scss";
 html,
 body {
+  background-color: #eee5e5;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
