--- a/styles/scss/components/_responsive.scss
+++ b/styles/scss/components/_responsive.scss
@@ -1,3 +1,38 @@
+@media (min-width: 1400px) {
+    .middle-sidebar-left {
+        padding-right: 0;
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .middle-sidebar-left {
+        padding-right: 0;
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 960px;
+    }
+    .vh-lg-100 {
+        height: 100vh;
+    }
+
+    .pl-lg--5 {
+        padding-left: 3rem !important;
+    }
+    .pr-lg--5 {
+        padding-right: 3rem !important;
+    }
+
+    .p-lg--5 {
+        padding: 3rem !important;
+    }
+    .w-lg-75 {
+        width: 75%;
+    }
+}
+
 @media (max-width: 1600px) {
     .display5-size {
         font-size: 60px !important;
