--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,3 +21,18 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.image-container {
+  width: 100%;
+
+  > div {
+    position: unset !important;
+  }
+
+  .image {
+    object-fit: contain;
+    width: 100% !important;
+    position: relative !important;
+    height: unset !important;
+  }
+}
