Add marketplace and adjust explore page and create page
Update css of UploadImage, ItemCard, ItemDetail. Add redux store for nft market

--- a/components/floatingbutton/FloatingButton.module.scss
+++ b/components/floatingbutton/FloatingButton.module.scss
@@ -3,7 +3,8 @@
     right: 45px;
     bottom: 45px;
     border-radius: 50%;
-
+    position: fixed;
+    z-index: 100;
     & .icon {
         background-color: #fff;
         height: 45px;
