--- a/styles/scss/components/_responsive.scss
+++ b/styles/scss/components/_responsive.scss
@@ -3,7 +3,7 @@
         padding-right: 0;
         margin-right: auto;
         margin-left: auto;
-        max-width: 960px;
+        // max-width: 960px;
     }
 }
 
@@ -12,7 +12,7 @@
         padding-right: 0;
         margin-right: auto;
         margin-left: auto;
-        max-width: 960px;
+        //max-width: 960px;
     }
     .vh-lg-100 {
         height: 100vh;
