--- a/styles/scss/components/_content.scss
+++ b/styles/scss/components/_content.scss
@@ -1,18 +1,21 @@
 .main-content {
+	left: 0;
+	margin: 0;
 	@include media-breakpoint-up(lg) {
 		-webkit-box-flex: 1;
 		-ms-flex-positive: 1;
 		flex-grow: 1;
-		padding-top: $nav-logo-height;
+		//padding-top: $nav-logo-height;
 		padding-left: $nav-width;
-		padding-right: $chat-width;
-		// padding-top: 96px;
+		//padding-right: $chat-width;
+		padding-top: 80px;
 		-webkit-transition: all 0.25s;
 		-o-transition: all 0.25s;
 		transition: all 0.25s;
 	}
 	&:not(.right-chat-active) {
-		padding-right: 0.5rem;
+		//padding-right: 0.5rem;
+		padding-right: 1rem;
 	}
 	&.menu-active {
 		padding-left: 90px;
@@ -20,7 +23,7 @@
 			left: 90px;
 		}
 	}
-	background-color: #fbfcfe;
+	//background-color: #fbfcfe;
 	@include media-breakpoint-down(md) {
 		order: 1;
 		position: relative;
