--- a/components/itemdetail/PostDetail.module.scss
+++ b/components/itemdetail/PostDetail.module.scss
@@ -1,3 +1,6 @@
+.post-card {
+    max-width: 1000px;
+}
 .image-rounded {
     border-bottom-right-radius: 0 !important;
     border-top-right-radius: 0 !important;
