--- a/components/uploadimage/UploadImage.module.scss
+++ b/components/uploadimage/UploadImage.module.scss
@@ -45,7 +45,7 @@
             align-items: center;
             flex-direction: column;
 
-            .button {
+            .upload-button {
                 height: 32px;
                 width: 32px;
                 border-radius: 100px;
@@ -62,6 +62,7 @@
                 color: #ffffff;
                 font-size: 100px;
                 cursor: pointer;
+                padding: 8px;
 
                 input[type="file"] {
                     height: 200px;
@@ -83,9 +84,28 @@
     .caption {
     }
     .action-button {
+        position: absolute;
+        width: 100%;
+        height: 30px;
+        left: 0;
+        bottom: 0;
+        background: #f1f1f1;
+        border-radius: 0 0 15px 15px;
         color: var(--theme-color) !important;
         & > * {
             margin-left: 10px;
         }
     }
+}
+
+.textarea {
+    border: 3px solid #f1f1f1;
+    border-width: 3px;
+    border-color: #f1f1f1 !important;
+    resize: none;
+}
+
+.typing-box {
+    width: 100%;
+    position: relative;
 }
