--- a/pages/pet/AddPetCard.module.scss
+++ b/pages/pet/AddPetCard.module.scss
@@ -1,9 +1,9 @@
-.create-post-card {
+.add-pet-card {
     border: 0;
     max-width: 1000px;
     .image-upload {
-        width: 340px;
-        min-height: 300px;
+        max-height: 200px;
+        aspect-ratio: 1;
         background-color: #efefef;
         border: 3px dashed grey;
         outline: 10px solid #e3e3e3;
@@ -15,8 +15,8 @@
             border: none;
             cursor: pointer;
             height: 32px;
-            top: 8px;
-            right: 8px;
+            top: 16px;
+            right: 16px;
             width: 32px;
             background-color: #fff;
             padding: 5px;
@@ -62,6 +62,11 @@
     }
 }
 
+.input {
+    border: 3px solid #f1f1f1;
+    border-width: 3px;
+    border-color: #f1f1f1 !important;
+}
 .textarea {
     border: 3px solid #f1f1f1;
     border-width: 3px;
