--- a/styles/scss/components/_content.scss
+++ b/styles/scss/components/_content.scss
@@ -5,7 +5,7 @@
 		-webkit-box-flex: 1;
 		-ms-flex-positive: 1;
 		flex-grow: 1;
-		padding-top: $nav-logo-height;
+		padding-top: calc($nav-logo-height + 6px);
 		padding-left: $nav-width;
 		padding-right: $chat-width;
 		//padding-top: 80px;
@@ -109,7 +109,7 @@
 	.middle-sidebar-bottom {
 		// overflow: scroll;
 		width: 100%;
-		padding: 20px 0px 10px 0px;
+		//padding: 20px 0px 10px 0px;
 
 		@include media-breakpoint-up(lg) {
 			@include webkit-box();
