Add register and login page handler, move register and login form into components/forms

--- a/components/controls/Controls.module.scss
+++ b/components/controls/Controls.module.scss
@@ -91,3 +91,10 @@
         border-radius: 7px;
     }
 }
+
+.primary-button {
+    padding: 0.5rem 1.5rem;
+    font-size: 14px;
+    border-radius: 30px;
+    border-color: inherit;
+}
