--- a/styles/scss/abstract/_color.scss
+++ b/styles/scss/abstract/_color.scss
@@ -449,3 +449,9 @@
     --theme-color-shade: #ffc0cb;
     --theme-color-tint: #ffc0cb;
 }
+.color-theme-violet {
+    --theme-color: #6450c8;
+    --theme-color-rgb: 0, 0, 0;
+    --theme-color-shade: #6450c8;
+    --theme-color-tint: #6450c8;
+}
