--- a/components/controls/Controls.module.scss
+++ b/components/controls/Controls.module.scss
@@ -133,7 +133,7 @@
         }
     }
 
-    &.isWaring {
+    &.isWarning {
         border: 3px solid var(--bs-warning) !important;
         .tooltip {
             background-color: var(--bs-warning);
