--- a/styles/scss/components/_content.scss
+++ b/styles/scss/components/_content.scss
@@ -119,7 +119,7 @@
 		// @include media-breakpoint-down(lg) {width: 400px;}
 		@include media-breakpoint-down(lg) {
 			width: 100%;
-			padding: 76px 15px 0;
+			padding: 76px 15px 0 !important;
 		}
 		@include media-breakpoint-down(md) {
 		}
