--- a/styles/scss/components/_responsive.scss
+++ b/styles/scss/components/_responsive.scss
@@ -114,3 +114,178 @@
         padding-right: 0;
     }
 }
+
+@media (max-width: 1400px) {
+    .overflow-visible-xl,
+    .overflow-visible-xl .owl-stage-outer {
+        overflow: visible !important;
+    }
+}
+
+@media (max-width: 1200px) {
+    .coming-soon-card,
+    .login-card {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    .display4-lg-size {
+        font-size: 50px !important;
+    }
+}
+@media (max-width: 991px) {
+    .display2-md-size {
+        font-size: 30px !important;
+    }
+    .display4-md-size {
+        font-size: 40px !important;
+    }
+
+    .coming-soon-card,
+    .login-card {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .md-mb-2 {
+        margin-bottom: 1rem !important;
+    }
+}
+
+@media (max-width: 768px) {
+    .col-xs-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .col-xs-12 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .col-xs-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .col-xs-3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+    .col-xs-9 {
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+    .col-xs-4 {
+        flex: 0 0 33.3333333333%;
+        max-width: 33.3333333333%;
+    }
+
+    .sm-mb-4 {
+        margin-bottom: 2rem !important;
+    }
+    .sm-mt-7 {
+        margin-top: 5rem !important;
+    }
+    .sm-mb-5 {
+        margin-bottom: 3rem !important;
+    }
+    .font-md-xxl {
+        font-size: 28px !important;
+    }
+
+    .sm-text-center {
+        text-align: center;
+    }
+
+    .coming-soon-card,
+    .login-card {
+        min-width: 320px;
+    }
+
+    .product-info-tab li {
+        margin-right: 20px !important;
+    }
+
+    .owl-carousel.category-card,
+    .owl-carousel.category-card .owl-stage-outer {
+        overflow: visible !important;
+    }
+}
+@media (max-width: 576px) {
+    .d-none-xs {
+        display: none !important;
+    }
+    .xs-mb-4 {
+        margin-bottom: 2rem !important;
+    }
+    .xs-mb-2 {
+        margin-bottom: 1rem !important;
+    }
+
+    .xs-p-4 {
+        padding: 2rem;
+    }
+
+    .xs-pt-10 {
+        padding-top: 100px;
+    }
+
+    .owl-theme.nav-xs-none .owl-nav {
+        display: none !important;
+    }
+
+    .col-xss-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+
+    .display4-xs-size {
+        font-size: 40px !important;
+    }
+    .font-md-xs {
+        font-size: 18px !important;
+    }
+
+    .play-btn {
+        width: 25px !important  ;
+        height: 25px !important ;
+    }
+
+    .col-xss-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .col-xss-12 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .col-xss-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .col-xss-3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+    .col-xss-9 {
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+    .col-xss-4 {
+        flex: 0 0 33.3333333333%;
+        max-width: 33.3333333333%;
+    }
+
+    .clearfix-xs {
+        width: 100%;
+        height: 1px;
+        display: block;
+    }
+
+    .emoji-wrap li i {
+        font-size: 16px;
+    }
+}
+@media (max-width: 360px) {
+    // .d-none-xss {display: none !important;}
+}
