--- a/styles/scss/components/_controls.scss
+++ b/styles/scss/components/_controls.scss
@@ -132,17 +132,19 @@
     }
 }
 
+/*
 .form-control {
-    line-height: 50px;
-    height: 50px;
-    font-size: 14px;
-    display: inline-block;
-    border: 2px #eee solid;
+    //line-height: 50px;
+    //height: 50px;
+    //font-size: 14px;
+    //display: inline-block;
+    //border: 2px #eee solid;
     &:focus {
-        border-color: var(--theme-color);
+        border-color: var(--theme-color) !important;
     }
     &.style2 {
         height: 60px;
         line-height: 60px;
     }
 }
+*/
