--- a/components/postcard/Postcard.module.scss
+++ b/components/postcard/Postcard.module.scss
@@ -1,8 +1,8 @@
 .hide {
     display: none !important;
 }
-.post-card:hover + .hide {
-    display: block !important;
+.post-card-hover {
+    background: radial-gradient(circle, rgba(244, 238, 241, 0) 0%, rgba(71, 71, 71, 0.8) 85%);
 }
 
 @media (min-width: 991px) {
