--- a/styles/scss/components/_content.scss
+++ b/styles/scss/components/_content.scss
@@ -1,6 +1,7 @@
 .main-content {
 	left: 0;
 	margin: 0;
+	min-height: 100vh;
 	@include media-breakpoint-up(lg) {
 		-webkit-box-flex: 1;
 		-ms-flex-positive: 1;
@@ -14,8 +15,9 @@
 		transition: all 0.25s;
 	}
 	&:not(.right-chat-active) {
-		padding-right: 0.5rem;
+		//padding-right: 0.5rem;
 		//padding-right: 1rem;
+		padding-right: 0;
 	}
 	&.menu-active {
 		padding-left: 90px;
