Update profile button on header, add flexable based on user on pet/user page

--- a/styles/scss/abstract/_dark.scss
+++ b/styles/scss/abstract/_dark.scss
@@ -81,6 +81,8 @@
         background: transparent !important;
     }
     .dropdown-menu-settings,
+    .dropdown-more-menu,
+    .dropdown-notification,
     .main-content {
         background-color: #1a2236;
     }
