Bind API in profile background, and pet page

--- a/styles/scss/base/_reset.scss
+++ b/styles/scss/base/_reset.scss
@@ -1,15 +1,14 @@
-
 * {
     outline: none;
     padding: 0;
 
     &::after {
-        margin : 0;
+        margin: 0;
         padding: 0;
     }
 
     &::before {
-        margin : 0;
+        margin: 0;
         padding: 0;
     }
 }
@@ -20,16 +19,25 @@ body {
     &.fixed {
         overflow: hidden;
         position: fixed;
-    } 
-
-
+    }
 }
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
-	font-weight:$headings-font-weight;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+    font-weight: $headings-font-weight;
 }
 ul {
     padding: 0;
-    margin : 0;
+    margin: 0;
 }
 
 li {
@@ -39,14 +47,14 @@ li {
 a {
     // color       : $td;
     text-decoration: none;
-    outline        : none;
+    outline: none;
 
     &:hover,
     &:focus,
     &.active {
         text-decoration: none;
-        outline        : none;
-        color          : $primary;
+        outline: none;
+        color: $primary !important;
     }
 }
 
@@ -60,12 +68,13 @@ strong,
     height: 0;
 }
 
-.main-wrap,.main-wrapper {
-    opacity       : 1;
-    transition    : all 0.25s ease-in;
-    overflow      : hidden;
-    position      : relative;
-    z-index       : 1;  
+.main-wrap,
+.main-wrapper {
+    opacity: 1;
+    transition: all 0.25s ease-in;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
 
     &.show {
         opacity: 1;
@@ -73,10 +82,8 @@ strong,
 }
 
 .content-body {
-    margin-left  : 65px;
-    margin-top   : 18px;
-    margin-right : 6px;
+    margin-left: 65px;
+    margin-top: 18px;
+    margin-right: 6px;
     margin-bottom: 45px;
 }
-
- 
