--- a/components/controls/Controls.module.scss
+++ b/components/controls/Controls.module.scss
@@ -123,7 +123,7 @@
 }
 
 .image-picker {
-    width: 340px;
+    width: 100%;
     min-height: 300px;
     background-color: #efefef;
     border: 3px dashed grey;
