--- a/components/floatingbutton/FloatingButton.module.scss
+++ b/components/floatingbutton/FloatingButton.module.scss
@@ -1,18 +1,11 @@
 .floatingButton {
-    position: absolute;
     right: 45px;
     bottom: 45px;
-    border-radius: 50%;
-    position: fixed;
     z-index: 100;
     & .icon {
-        background-color: #fff;
+        font-size: 1.7rem;
         height: 45px;
         width: 45px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 50%;
 
         &:hover {
             color: var(--theme-color) !important;
