Add a wysiwyg editor, create event, detail event compents, and add event pages

--- a/styles/scss/abstract/_dark.scss
+++ b/styles/scss/abstract/_dark.scss
@@ -169,6 +169,9 @@
     .text-dark-color {
         color: #111 !important;
     }
+    .bg-dark-color {
+        background-color: #333 !important;
+    }
 
     .bor-0 {
         border: 0 !important;
