--- a/components/forms/Forms.module.scss
+++ b/components/forms/Forms.module.scss
@@ -9,8 +9,8 @@
 }
 
 .textarea {
-    border: 3px solid #f1f1f1;
-    border-width: 3px;
+    border: 3px solid #f1f1f1 !important;
+    border-width: 3px !important;
     border-color: #f1f1f1 !important;
     resize: none;
 }
