Add notificaions page, add suggested pets in explore, separate events page into different tabs based on start and end time, fix error is raised on masonry issue

--- a/styles/scss/components/_navigation.scss
+++ b/styles/scss/components/_navigation.scss
@@ -444,3 +444,10 @@
         transition: 0.3s all;
     }
 }
+
+.mytab .nav-link {
+    &.active {
+        color: var(--theme-color) !important;
+    }
+    padding: 0rem 0.5rem;
+}
