--- a/components/controls/Controls.module.scss
+++ b/components/controls/Controls.module.scss
@@ -188,3 +188,11 @@
     min-height: 300px;
     height: max-content !important;
 }
+
+.datetime-picker {
+    & > .react-datetimerange-picker__wrapper {
+        border: 3px solid #f1f1f1 !important;
+        border-width: 3px !important;
+        border-color: #f1f1f1 !important;
+    }
+}
