--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -66,3 +66,13 @@ a {
   line-clamp: 1;
   -webkit-box-orient: vertical;
 }
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+  }
+}
