Update responsive profile page

--- a/styles/scss/components/_navigation.scss
+++ b/styles/scss/components/_navigation.scss
@@ -331,7 +331,7 @@
                 line-height: 28px;
                 padding-left: 0;
                 width: auto;
-                i.feather-zap {
+                .logo-size-small {
                     font-size: 28px !important;
                     margin-right: 5px !important;
                 }
