--- a/styles/scss/abstract/_color.scss
+++ b/styles/scss/abstract/_color.scss
@@ -6,7 +6,8 @@
             background-color: rgba(0, 0, 0, 0.9);
         }
     }
-    .card {
+    .card,
+    .mytab {
         background-color: #293145 !important;
     }
     .app-footer {
