--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -76,3 +76,32 @@ a {
     display: none; /* for Chrome, Safari, and Opera */
   }
 }
+
+.more-button {
+  .toggle {
+    transition: 0.1s;
+
+    &.active {
+      transform: rotate(90deg);
+      transition: 0.1s;
+    }
+  }
+  .item {
+    visibility: hidden;
+    -moz-transform: translate(30px, 0px);
+    -webkit-transform: translate(30px, 0px);
+    -o-transform: translate(30px, 0px);
+    -ms-transform: translate(30px, 0px);
+    transform: translate(30px, 0px);
+    transition: 0.1s;
+  }
+  &.active > .item {
+    visibility: visible;
+    -moz-transform: none;
+    -webkit-transform: none;
+    -o-transform: none;
+    -ms-transform: none;
+    transform: none;
+    transition: 0.1s;
+  }
+}
